[package]
name = "avail-base"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Substrate related
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
sp-std = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-runtime-interface = { workspace = true, default-features = false }

substrate-prometheus-endpoint = { workspace = true, optional = true }

# 3rd-party
log.workspace = true
once_cell = { workspace = true, optional = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"once_cell",
	"sp-api/std",
	"sp-runtime-interface/std",
	"sp-runtime/std",
	"sp-std/std",
	"substrate-prometheus-endpoint",
]
