[package]
name = "avail-base"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
avail-core = { workspace = true, default-features = false }

# Substrate related
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false, features = ["serde"] }
sp-std = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-runtime-interface = { workspace = true, default-features = false }
sp-authority-discovery = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
binary-merkle-tree = { workspace = true, default-features = false }

# 3rd-party
log = { workspace = true, default-features = false }
derive_more.workspace = true
itertools = { workspace = true, default-features = false }

[dev-dependencies]
test-case.workspace = true
hex-literal.workspace = true

[features]
default = [ "std" ]
std = [
	"avail-core/std",
	"binary-merkle-tree/std",
	"codec/std",
	"frame-support/std",
	"log/std",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-core/std",
	"sp-runtime-interface/std",
	"sp-runtime/std",
	"sp-std/std",
]
