[package]
name = "blob"
version = "0.1.0"
edition = "2021"

[dependencies]
da-runtime = { workspace = true, default-features = false }
da-control = { workspace = true, default-features = false }

codec = { package = "parity-scale-codec", version = "3", default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sc-network = { workspace = true, default-features = false }
sc-client-api = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sc-transaction-pool-api = { workspace = true, default-features = false }

jsonrpsee = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
async-channel = { workspace = true }
once_cell = { workspace = true }

anyhow = "1.0"
tokio = { version = "1.43.0", features = ["sync", "fs", "macros", "rt-multi-thread"] }
parking_lot = { workspace = true }

[features]
default = []
std = []
