[package]
name = "avail-blob"
version = "0.1.0"
edition = "2021"

[dependencies]
da-runtime = { workspace = true, default-features = false }
da-control = { workspace = true, default-features = false }
avail-core = { workspace = true, default-features = false }
kate = { workspace = true, default-features = false }
kate-recovery = { workspace = true, default-features = false }

rand = { workspace = true }
rayon = { workspace = true }
codec = { package = "parity-scale-codec", version = "3", default-features = false }
scale-info = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
avail-base = { workspace = true, default-features = false }
da-commitment = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sc-network = { workspace = true, default-features = false }
sc-network-gossip = { workspace = true, default-features = false }
sc-network-sync = { workspace = true, default-features = false }
sc-client-api = { workspace = true, default-features = false }
sc-service = { workspace = true, default-features = false }
sc-executor = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sc-transaction-pool-api = { workspace = true, default-features = false }
sc-keystore = { workspace = true, default-features = false }
sp-authority-discovery = { workspace = true, default-features = false }
sc-authority-discovery = { workspace = true, default-features = false }
kvdb = { workspace = true, default-features = false }
kvdb-rocksdb = { workspace = true, default-features = false }
tempfile = { workspace = true }
jsonrpsee = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
async-channel = { workspace = true }
once_cell = { workspace = true }
anyhow = "1.0"

[features]
default = []
std = []
