[package]
name = "avail-core"
version = "0.5.1"
authors = []
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Others
derive_more = { version = "0.99.17", default-features = false, features = ["constructor", "from", "add", "deref", "mul", "into"] }
hash256-std-hasher = { version = "0.15.2", default-features = false }
hex = { version = "0.4", optional = true, default-features = false, features = ["alloc", "serde"] }
log = { version = "0.4.8", default-features = false }
serde = { version = "1.0.163", default-features = false, features = ["derive", "alloc"], optional = true }
static_assertions = { version = "1.1.0" }
thiserror-no-std = { version = "2.0.2" }

# Substrate
binary-merkle-tree = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false, optional = true }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }

# Substrate Runtime
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false, optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false, optional = true }
sp-runtime-interface = {git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false, optional = true }

[dev-dependencies]
hex-literal = { version = "0.3.4" }
serde_json = { version = "1" }
test-case = { version = "1.2.3" }

[features]
default = [ "std" ]
std = [
	"binary-merkle-tree?/std",
	"codec/std",
	"derive_more/display",
	"frame-support?/std",
	"hash256-std-hasher/std",
	"hex",
	"log/std",
	"scale-info/std",
	"serde/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime-interface?/std",
	"sp-runtime?/std",
	"sp-std/std",
	"sp-trie/std",
]
runtime = [
	"binary-merkle-tree",
	"frame-support",
	"serde",
	"sp-runtime",
	"sp-runtime-interface",
]

try-runtime = [ "runtime", "sp-runtime/try-runtime" ]
serde = [ "dep:serde", "hex/serde", "log/serde" ]
