[package]
name = "avail-core"
version = "0.6.2"
authors = []
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Others
derive_more.workspace = true
ethabi-decode.workspace = true
hash256-std-hasher.workspace = true
hex = { workspace = true, optional = true }
log.workspace = true
serde = { workspace = true, optional = true }
static_assertions.workspace = true
thiserror-no-std.workspace = true
tiny-keccak.workspace = true

# Parity
binary-merkle-tree = { workspace = true, optional = true }
bounded-collections.workspace = true
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info.workspace = true

frame-support = { workspace = true, optional = true }
sp-arithmetic.workspace = true
sp-core.workspace = true
sp-runtime = { workspace = true, optional = true }
sp-runtime-interface = { workspace = true, optional = true }
sp-std.workspace = true
sp-trie.workspace = true
sp-io.workspace = true

[dev-dependencies]
hex-literal.workspace = true
rand.workspace = true
serde_json.workspace = true
test-case.workspace = true
avail-core = { path = ".", features = ["runtime"] }
trybuild = "1.0.96"

[features]
default = [ "std" ]
std = [
	"binary-merkle-tree?/std",
	"bounded-collections/std",
	"codec/std",
	"derive_more/display",
	"ethabi-decode/std",
	"frame-support?/std",
	"hash256-std-hasher/std",
	"hex",
	"log/std",
	"scale-info/std",
	"serde/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime-interface?/std",
	"sp-runtime?/std",
	"sp-std/std",
	"sp-trie/std",
]
runtime = [
	"binary-merkle-tree",
	"frame-support",
	"serde",
	"sp-runtime",
	"sp-runtime-interface",
]
disable_panic_handler = [ "sp-io/disable_panic_handler" ]

try-runtime = [ "runtime", "sp-runtime/try-runtime" ]
serde = [ "dep:serde", "hex/serde", "log/serde" ]
