[package]
name = "da-commitment"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kate = { workspace = true, default-features = false }
thiserror-no-std.workspace = true
log.workspace = true
anyhow = { version = "1.0", default-features = false}

[dev-dependencies]
divan = { version = "0.1"}

[features]
default = [ "std" ]
std = [ "anyhow/std", "kate/std" ]

[[bench]]
name = "commitment"
harness = false
