[package]
name = "da-commitment"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
avail-fri = { workspace = true, default-features = false }
kate = { workspace = true, default-features = false }
primitive-types.workspace = true
thiserror-no-std.workspace = true
log.workspace = true
anyhow = "1.0"
divan = { version = "0.1"}

[features]
default = ["std"]
std = [
    "avail-fri/std",
    "kate/std",
]

[[bench]]
name = "commitment"
harness = false
