[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
avail-rust = { package = "avail-rust-client", path = "../../avail-rust/client", default-features = false, features = ["native", "reqwest"] }
# avail-rust = { package = "avail-rust-client", git = "https://github.com/availproject/avail-rust.git", rev = "610db1c5bcad3e636e6c3192b80cec95f002c737", default-features = false, features = ["native", "reqwest", "next"] }
da-commitment = { path = "../da-commitment" }
sp-std = { git = "https://github.com/availproject/polkadot-sdk.git", branch = "ghali/infinity-da", default-features = false, features = ["std"] }
kate = { git = "https://github.com/availproject/avail-core", branch = "ghali/infinity-da", default-features = false, features = ["std"] }
hex = "0.4"
codec = { package = "parity-scale-codec", version = "3", default-features = false }
sp-crypto-hashing = { version = "0.1.0", default-features = false }

# Other
serde = { version = "1.0.195", default-features = false, features = [ "derive", "alloc" ] }
tokio = { version = "1.45.1", features = ["sync", "fs", "macros", "rt-multi-thread"] }
