[package]
name = "fuzzing"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "*"
kate-recovery = { git = "https://github.com/maticnetwork/avail-core.git", tag = "da/v0.4.0" }
kate = { git = "https://github.com/maticnetwork/avail-core.git", tag = "da/v0.4.0" }
da-primitives = { git = "https://github.com/maticnetwork/avail-core.git", tag = "da/v0.4.0", default-features = false }
hex-literal = "0.3.1"

[[bin]]
name = "build_commitment_fuzz"
path = "src/build_commitment_fuzz.rs"

[[bin]]
name = "build_proof_fuzz"
path = "src/build_proof_fuzz.rs"
