[package]
name = "fuzzing"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "*"
kate-recovery = "0.7" 
kate = "0.5" 
da-primitives = "0.4"
hex-literal = "0.3.1"

[[bin]]
name = "build_commitment_fuzz"
path = "src/build_commitment_fuzz.rs"

[[bin]]
name = "build_proof_fuzz"
path = "src/build_proof_fuzz.rs"
