[package]
name = "kate"
version = "0.8.1"
authors = ["Denis Ermolin <denis.ermolin@matic.network>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Pending to review
poly-multiproof = { git = "https://github.com/availproject/poly-multiproof", default-features = false, tag = "v0.0.1", optional = true }

# Internal
avail-core = { path = "../core", default-features = false }
kate-recovery = { path = "recovery", default-features = false }

dusk-plonk = { git = "https://github.com/availproject/plonk.git", tag = "v0.12.0-polygon-2", optional = true }

# Parity & Substrate
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }

# 3rd-party
derive_more = { version = "0.99.17", default-features = false, features = ["constructor"] }
static_assertions = { version = "1.1.0" }
thiserror-no-std = { version = "2.0.2" }

dusk-bytes = { version = "0.1.6", default-features = false, optional = true }
hex = { version = "0.4", optional = true, default-features = false, features = ["alloc", "serde"] }
hex-literal = { version = "0.3.4", optional = true }
log = { version = "0.4.8", optional = true }
nalgebra = { version = "0.32.2", default-features = false, optional = true }
once_cell = { version = "1.8.0", optional = true }
rand = { version = "0.8", default-features = false, features = ["alloc", "small_rng"], optional = true }
rand_chacha = { version = "0.3", default-features = false, optional = true }
rayon = { version = "1.5.2", optional = true }
serde = { version = "1.0.188", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
proptest = { version = "1" }
serde_json = { version = "1" }
test-case = { version = "1.2.3" }

[features]
default = [ "std" ]
alloc = [ "dusk-plonk/alloc", "nalgebra/alloc" ]
parallel = [ "criterion/rayon", "rayon" ]

std = [
	"avail-core/std",
	"codec/std",
	"dusk-bytes",
	"dusk-plonk/std",
	"hex",
	"hex-literal",
	"kate-recovery/std",
	"log",
	"nalgebra/std",
	"once_cell",
	"parallel",
	"poly-multiproof/blst",
	"rand/std",
	"rand_chacha/std",
	"serde",
	"serde_json",
	"sp-arithmetic/std",
	"sp-core/std",
]

serde = [ "dep:serde" ]

extended-columns = []
maximum-block-size = []

[[bench]]
name = "reconstruct"
harness = false
