[package]
name = "avail-metrics"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
substrate-prometheus-endpoint = { workspace = true }
log.workspace = true
once_cell = { workspace = true }
