[package]
name = "avail-node"
version = "2.0.0"
description = "Avail Node"
authors = ["Anonymous"]
homepage = "https://www.availproject.org/"
edition = "2021"
license = "GNU GPLv3"
publish = false
repository = "https://github.com/availproject/avail"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "avail-node"

[dependencies]
avail-base = { path = "../base" }

# Internals
avail-core = { workspace = true, features = ["std"] }
kate = { workspace = true }
da-runtime = { path = "../runtime" }
da-control = { path = "../pallets/dactr" }
kate-rpc = { path = "../rpc/kate-rpc" }

# 3rd-party
codec = { package = "parity-scale-codec", version = "3" }
clap = { version = "4.4.17", features = ["derive"], optional = true }
clap-num = { version = "1.1.1", optional = true }
jsonrpsee = { version = "0.16.2", features = ["server"] }
futures = "0.3.21"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
lru = "0.7.2"
log = "0.4.17"
rand = "0.8"
hex-literal = "0.3.4"
derive_more = "0.99.17"
async-trait = "0.1.60"

# Substrate
## Primitives
sc-cli = { workspace = true }
sp-io = { workspace = true }
sp-statement-store = { workspace = true }
sp-core = { workspace = true }
sc-executor = { workspace = true }
sc-service = { workspace = true }
sc-storage-monitor = { workspace = true }
sc-telemetry = { workspace = true }
sc-keystore = { workspace = true }
sp-keystore = { workspace = true }
sp-keyring = { workspace = true }
sc-transaction-pool = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-inherents = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-transaction-storage-proof = { workspace = true }
sc-consensus-babe-rpc = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus = { workspace = true }
sc-consensus = { workspace = true }
sc-offchain = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sc-client-api = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-slots = { workspace = true }
sc-network = { workspace = true }
sp-authority-discovery = { workspace = true }
sc-authority-discovery = { workspace = true }
sc-chain-spec = { workspace = true }
sc-client-db = { workspace = true }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-sync-state-rpc = { workspace = true }
sp-api = { workspace = true }
sc-sysinfo = { workspace = true }
sc-network-common = { workspace = true }
sc-network-sync = { workspace = true }
primitive-types = "0.12.0"

# FRAME
pallet-im-online = { workspace = true }
frame-system = { path = "../pallets/system" }
pallet-transaction-payment = { workspace = true }
frame-support = { workspace = true }
mmr-rpc = { workspace = true }

# These dependencies are used for the node template's RPCs
sc-rpc = { workspace = true }
sp-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-rpc-spec-v2 = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
substrate-state-trie-migration-rpc = { workspace = true }
substrate-prometheus-endpoint = "0.10.0-dev"

# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }

# Try-runtime
try-runtime-cli = { workspace = true, optional = true }

# Custom
frame-system-rpc-runtime-api = { path = "../pallets/system/rpc/runtime-api" }

[build-dependencies]
substrate-build-script-utils = { workspace = true }
clap = { version = "4.4.17", optional = true }
clap_complete = { version = "4.0.2", optional = true }
frame-benchmarking-cli = { workspace = true, optional = true }

[dev-dependencies]
sp-tracing = { workspace = true }
tempfile = "3.1.0"

[features]
default = [ "cli" ]
header_commitment_corruption = [ "da-runtime/header_commitment_corruption" ]
fast-runtime = [ "da-runtime/fast-runtime" ]
cli = [ "clap", "clap-num", "clap_complete", "frame-benchmarking-cli" ]
runtime-benchmarks = [
	"da-control/runtime-benchmarks",
	"da-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"avail-core/try-runtime",
	"da-control/try-runtime",
	"da-runtime/try-runtime",
	"frame-system/try-runtime",
	"try-runtime-cli/try-runtime",
]
